--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@reduxjs/toolkit": "^1.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-redux": "^7.2.8"
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
